--- a/Train.ipynb
+++ b/Train.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMroQG1Os3k7CwR3iGqWEhE",
+      "authorship_tag": "ABX9TyMI4NHAEWgkyeh7VY/9v0mH",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -55,13 +55,12 @@
         "import pandas as pd\n",
         "import numpy as np\n",
         "import matplotlib.pyplot as plt\n",
-        "import seaborn as sns\n",
-        "---\n"
+        "import seaborn as sns\n"
       ],
       "metadata": {
         "id": "EoDfnMDoag1n"
       },
-      "execution_count": null,
+      "execution_count": 43,
       "outputs": []
     },
     {
@@ -91,9 +90,9 @@
           "base_uri": "https://localhost:8080/",
           "height": 325
         },
-        "outputId": "52d7722c-3441-4378-d011-0ce6c4eb7ce9"
+        "outputId": "257b3268-9afa-47e0-ebe0-cd117e33b89a"
       },
-      "execution_count": null,
+      "execution_count": 44,
       "outputs": [
         {
           "output_type": "display_data",
@@ -138,7 +137,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-a37e76a7-c619-48e8-9a6f-633cfd896d41\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-ee3ef945-43b0-45b2-a9fc-a258e7cca645\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -308,7 +307,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-a37e76a7-c619-48e8-9a6f-633cfd896d41')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-ee3ef945-43b0-45b2-a9fc-a258e7cca645')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -360,12 +359,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-a37e76a7-c619-48e8-9a6f-633cfd896d41 button.colab-df-convert');\n",
+              "        document.querySelector('#df-ee3ef945-43b0-45b2-a9fc-a258e7cca645 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-a37e76a7-c619-48e8-9a6f-633cfd896d41');\n",
+              "        const element = document.querySelector('#df-ee3ef945-43b0-45b2-a9fc-a258e7cca645');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -385,8 +384,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "    <div id=\"df-7ed9556c-21c4-4f68-9bb1-ee016c45cedc\">\n",
-              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-7ed9556c-21c4-4f68-9bb1-ee016c45cedc')\"\n",
+              "    <div id=\"df-eafd6601-5012-4cb7-9c2f-e10bb1001d8f\">\n",
+              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-eafd6601-5012-4cb7-9c2f-e10bb1001d8f')\"\n",
               "                title=\"Suggest charts\"\n",
               "                style=\"display:none;\">\n",
               "\n",
@@ -505,7 +504,7 @@
               "        }\n",
               "        (() => {\n",
               "          let quickchartButtonEl =\n",
-              "            document.querySelector('#df-7ed9556c-21c4-4f68-9bb1-ee016c45cedc button');\n",
+              "            document.querySelector('#df-eafd6601-5012-4cb7-9c2f-e10bb1001d8f button');\n",
               "          quickchartButtonEl.style.display =\n",
               "            google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "        })();\n",
@@ -546,9 +545,9 @@
           "height": 1000
         },
         "id": "gKZShx0ueeeQ",
-        "outputId": "d09ec10d-6633-448e-d230-887b4d31fd4c"
+        "outputId": "ce652fb2-c708-42b4-f94d-9e7a06de50b1"
       },
-      "execution_count": null,
+      "execution_count": 45,
       "outputs": [
         {
           "output_type": "stream",
@@ -675,7 +674,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-3478fc55-6a38-416b-ba19-ec0289189431\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-ce71fb0d-f4b3-498b-9b90-68ce7dddad50\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -917,7 +916,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-3478fc55-6a38-416b-ba19-ec0289189431')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-ce71fb0d-f4b3-498b-9b90-68ce7dddad50')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -969,12 +968,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-3478fc55-6a38-416b-ba19-ec0289189431 button.colab-df-convert');\n",
+              "        document.querySelector('#df-ce71fb0d-f4b3-498b-9b90-68ce7dddad50 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-3478fc55-6a38-416b-ba19-ec0289189431');\n",
+              "        const element = document.querySelector('#df-ce71fb0d-f4b3-498b-9b90-68ce7dddad50');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -994,8 +993,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "    <div id=\"df-b42fadef-998a-453b-838f-2067a4cb0619\">\n",
-              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-b42fadef-998a-453b-838f-2067a4cb0619')\"\n",
+              "    <div id=\"df-06fdf975-cd8c-43bb-b32c-5390057e4f34\">\n",
+              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-06fdf975-cd8c-43bb-b32c-5390057e4f34')\"\n",
               "                title=\"Suggest charts\"\n",
               "                style=\"display:none;\">\n",
               "\n",
@@ -1114,7 +1113,7 @@
               "        }\n",
               "        (() => {\n",
               "          let quickchartButtonEl =\n",
-              "            document.querySelector('#df-b42fadef-998a-453b-838f-2067a4cb0619 button');\n",
+              "            document.querySelector('#df-06fdf975-cd8c-43bb-b32c-5390057e4f34 button');\n",
               "          quickchartButtonEl.style.display =\n",
               "            google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "        })();\n",
@@ -1166,10 +1165,10 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 277
+          "height": 291
         },
         "id": "134d3860",
-        "outputId": "6a0510f4-a71f-4727-9cd1-5869ff81b6d1"
+        "outputId": "59e144bf-c39f-4fe7-86d8-70f2b474b3c7"
       },
       "source": [
         "# cần run file từ đầu đến cuối\n",
@@ -1182,7 +1181,7 @@
         "print(\"\\nBiến phân loại:\")\n",
         "display(categorical_cols)"
       ],
-      "execution_count": null,
+      "execution_count": 46,
       "outputs": [
         {
           "output_type": "stream",
@@ -1247,13 +1246,13 @@
       ],
       "metadata": {
         "id": "yzEuyuUthy-b",
-        "outputId": "b8ac4937-56c5-47cb-a732-145c7bec5b32",
+        "outputId": "ee2b2e9a-aeee-4488-cfe5-5ab20caefbb3",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
         }
       },
-      "execution_count": null,
+      "execution_count": 47,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1465,7 +1464,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 8
+          "execution_count": 47
         }
       ]
     },
@@ -1481,7 +1480,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "2.   Xử lý dữ liệu dư thừa"
+        "2.   Xử lý dữ liệu dư thừa, dữ liệu nhiễu (không liên quan)"
       ],
       "metadata": {
         "id": "-I63RCDViX60"
@@ -1490,13 +1489,85 @@
     {
       "cell_type": "code",
       "source": [
-        "df.drop(column='Over18', axis =0, inplace= true)\n"
+        "df.drop(columns=['Over18', 'EmployeeNumber', 'EmployeeCount'], axis =1, inplace= True)\n",
+        "display(df.info())"
       ],
       "metadata": {
-        "id": "zq7qIM7GAYkL"
+        "id": "zq7qIM7GAYkL",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 748
+        },
+        "outputId": "49ff6385-9f57-4669-c49f-ae3f745149ae"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 48,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "<class 'pandas.core.frame.DataFrame'>\n",
+            "RangeIndex: 1470 entries, 0 to 1469\n",
+            "Data columns (total 32 columns):\n",
+            " #   Column                    Non-Null Count  Dtype \n",
+            "---  ------                    --------------  ----- \n",
+            " 0   Age                       1470 non-null   int64 \n",
+            " 1   Attrition                 1470 non-null   object\n",
+            " 2   BusinessTravel            1470 non-null   object\n",
+            " 3   DailyRate                 1470 non-null   int64 \n",
+            " 4   Department                1470 non-null   object\n",
+            " 5   DistanceFromHome          1470 non-null   int64 \n",
+            " 6   Education                 1470 non-null   int64 \n",
+            " 7   EducationField            1470 non-null   object\n",
+            " 8   EnvironmentSatisfaction   1470 non-null   int64 \n",
+            " 9   Gender                    1470 non-null   object\n",
+            " 10  HourlyRate                1470 non-null   int64 \n",
+            " 11  JobInvolvement            1470 non-null   int64 \n",
+            " 12  JobLevel                  1470 non-null   int64 \n",
+            " 13  JobRole                   1470 non-null   object\n",
+            " 14  JobSatisfaction           1470 non-null   int64 \n",
+            " 15  MaritalStatus             1470 non-null   object\n",
+            " 16  MonthlyIncome             1470 non-null   int64 \n",
+            " 17  MonthlyRate               1470 non-null   int64 \n",
+            " 18  NumCompaniesWorked        1470 non-null   int64 \n",
+            " 19  OverTime                  1470 non-null   object\n",
+            " 20  PercentSalaryHike         1470 non-null   int64 \n",
+            " 21  PerformanceRating         1470 non-null   int64 \n",
+            " 22  RelationshipSatisfaction  1470 non-null   int64 \n",
+            " 23  StandardHours             1470 non-null   int64 \n",
+            " 24  StockOptionLevel          1470 non-null   int64 \n",
+            " 25  TotalWorkingYears         1470 non-null   int64 \n",
+            " 26  TrainingTimesLastYear     1470 non-null   int64 \n",
+            " 27  WorkLifeBalance           1470 non-null   int64 \n",
+            " 28  YearsAtCompany            1470 non-null   int64 \n",
+            " 29  YearsInCurrentRole        1470 non-null   int64 \n",
+            " 30  YearsSinceLastPromotion   1470 non-null   int64 \n",
+            " 31  YearsWithCurrManager      1470 non-null   int64 \n",
+            "dtypes: int64(24), object(8)\n",
+            "memory usage: 367.6+ KB\n"
+          ]
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "None"
+            ]
+          },
+          "metadata": {}
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Qua quan sát dữ liệu thì có thể thấy các cột dữ liệu không cần thiết như sau:\n",
+        "*   **Over18** tất cả nhân viên đều đã trên 18 tuổi\n",
+        "*   **EmployeeCount** luôn có giá trị là 1"
+      ],
+      "metadata": {
+        "id": "tiVDqoOflLNu"
+      }
     }
   ]
 }
