--- a/Train.ipynb
+++ b/Train.ipynb
@@ -2293,6 +2293,41 @@
         "plt.title('Heatmap Ma trận tương quan các biến')\n",
         "plt.show()"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# Xây dựng mô hình (Build Model)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Mô hình hồi quy"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Mô hình cây quyết định (Decision Tree)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Mô hình Random Forest"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Mô hình KNN"
+      ]
     }
   ],
   "metadata": {
