--- a/Train.ipynb
+++ b/Train.ipynb
@@ -2298,6 +2298,13 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
+        "#Chia bộ dữ liệu ra làm 2 phần 70/30 để huấn luyện mô hình"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
         "# Xây dựng mô hình (Build Model)"
       ]
     },
