--- a/Train.ipynb
+++ b/Train.ipynb
@@ -16,7 +16,7 @@
         "id": "VdMwbHRpAcLX"
       },
       "source": [
-        "#**XÂY DỰNG MÔ HÌNH DỰ ĐOÁN NGUY CƠ NGHỈ VIỆC CỦA NHÂN VIÊN**\n",
+        "**XÂY DỰNG MÔ HÌNH DỰ ĐOÁN NGUY CƠ NGHỈ VIỆC CỦA NHÂN VIÊN**\n",
         "---"
       ]
     },
@@ -26,7 +26,7 @@
         "id": "cBRRZhYFayCv"
       },
       "source": [
-        "#Import các thư viện sẽ sử dụng trong đồ án bao gồm:\n",
+        "**#Import các thư viện sẽ sử dụng trong đồ án bao gồm:**\n",
         "*   **Pandas**\n",
         "*   **Numpy**\n",
         "*   **Matplotlib**\n",
@@ -35,7 +35,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": 18,
       "metadata": {
         "id": "EoDfnMDoag1n"
       },
@@ -56,12 +56,12 @@
       },
       "source": [
         "---\n",
-        "#Đọc file dataset có được từ trang web *Kaggle.com*"
+        "**Đọc file dataset**"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": 19,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -301,12 +301,12 @@
       },
       "source": [
         "---\n",
-        "#Mô tả tổng quan về dataset"
+        "**Mô tả tổng quan về dataset**"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": 20,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -720,7 +720,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": 21,
       "metadata": {
         "collapsed": true,
         "id": "134d3860"
@@ -789,13 +789,19 @@
       },
       "source": [
         "---\n",
-        "#**Tiền xử lý dữ liệu**\n",
-        "1.   Xử lý dữ liệu thiếu"
+        "**Tiền xử lý dữ liệu**"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Xử lý dữ liệu thiếu"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": 22,
       "metadata": {
         "collapsed": true,
         "id": "yzEuyuUthy-b"
@@ -842,7 +848,7 @@
               "dtype: int64"
             ]
           },
-          "execution_count": 19,
+          "execution_count": 22,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -857,7 +863,7 @@
         "id": "6sVR5mWQh-2m"
       },
       "source": [
-        "**Không có dữ liệu thiếu trong dataset**"
+        "*Không có dữ liệu thiếu trong dataset*"
       ]
     },
     {
@@ -866,12 +872,12 @@
         "id": "-I63RCDViX60"
       },
       "source": [
-        "2.   Xử lý dữ liệu dư thừa, dữ liệu nhiễu (không liên quan)"
+        "*Xử lý dữ liệu dư thừa, dữ liệu nhiễu (không liên quan)*"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": 23,
       "metadata": {
         "id": "zq7qIM7GAYkL"
       },
@@ -882,7 +888,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": 24,
       "metadata": {
         "collapsed": true,
         "id": "Y8iyMoQItSsU"
@@ -1281,16 +1287,36 @@
     },
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "5vECD2SSysS9"
-      },
+      "metadata": {},
       "source": [
-        "3.   Xử lý mã hóa biến phân loại"
+        "**Kiểu tra xem có dữ liệu trùng lặp hay không**"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "\n",
+        "duplicate_rows = df[df.duplicated()]\n",
+        "print(f\"Số hàng trùng lặp: {duplicate_rows.shape[0]}\")\n",
+        "print(\"Các hàng trùng lặp:\")\n",
+        "display(duplicate_rows)\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "5vECD2SSysS9"
+      },
+      "source": [
+        "**Xử lý mã hóa biến phân loại**"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 25,
       "metadata": {
         "collapsed": true,
         "id": "3qi-y8r0tedh"
@@ -1676,7 +1702,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": 26,
       "metadata": {
         "id": "3eeffc8a"
       },
@@ -1940,7 +1966,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": 27,
       "metadata": {
         "id": "54b64132"
       },
@@ -1968,7 +1994,7 @@
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "C:\\Users\\ADMIN\\AppData\\Local\\Temp\\ipykernel_26392\\3485626961.py:8: FutureWarning: \n",
+            "C:\\Users\\ADMIN\\AppData\\Local\\Temp\\ipykernel_6868\\3485626961.py:8: FutureWarning: \n",
             "\n",
             "Passing `palette` without assigning `hue` is deprecated and will be removed in v0.14.0. Assign the `x` variable to `hue` and set `legend=False` for the same effect.\n",
             "\n",
@@ -2016,7 +2042,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": 28,
       "metadata": {},
       "outputs": [
         {
@@ -2033,97 +2059,97 @@
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "C:\\Users\\ADMIN\\AppData\\Local\\Temp\\ipykernel_26392\\3833673906.py:22: FutureWarning: \n",
+            "C:\\Users\\ADMIN\\AppData\\Local\\Temp\\ipykernel_6868\\3833673906.py:22: FutureWarning: \n",
             "\n",
             "Passing `palette` without assigning `hue` is deprecated and will be removed in v0.14.0. Assign the `x` variable to `hue` and set `legend=False` for the same effect.\n",
             "\n",
             "  sns.countplot(x=col, data=df, palette='viridis')\n",
-            "C:\\Users\\ADMIN\\AppData\\Local\\Temp\\ipykernel_26392\\3833673906.py:22: FutureWarning: \n",
+            "C:\\Users\\ADMIN\\AppData\\Local\\Temp\\ipykernel_6868\\3833673906.py:22: FutureWarning: \n",
             "\n",
             "Passing `palette` without assigning `hue` is deprecated and will be removed in v0.14.0. Assign the `x` variable to `hue` and set `legend=False` for the same effect.\n",
             "\n",
             "  sns.countplot(x=col, data=df, palette='viridis')\n",
-            "C:\\Users\\ADMIN\\AppData\\Local\\Temp\\ipykernel_26392\\3833673906.py:22: FutureWarning: \n",
+            "C:\\Users\\ADMIN\\AppData\\Local\\Temp\\ipykernel_6868\\3833673906.py:22: FutureWarning: \n",
             "\n",
             "Passing `palette` without assigning `hue` is deprecated and will be removed in v0.14.0. Assign the `x` variable to `hue` and set `legend=False` for the same effect.\n",
             "\n",
             "  sns.countplot(x=col, data=df, palette='viridis')\n",
-            "C:\\Users\\ADMIN\\AppData\\Local\\Temp\\ipykernel_26392\\3833673906.py:22: FutureWarning: \n",
+            "C:\\Users\\ADMIN\\AppData\\Local\\Temp\\ipykernel_6868\\3833673906.py:22: FutureWarning: \n",
             "\n",
             "Passing `palette` without assigning `hue` is deprecated and will be removed in v0.14.0. Assign the `x` variable to `hue` and set `legend=False` for the same effect.\n",
             "\n",
             "  sns.countplot(x=col, data=df, palette='viridis')\n",
-            "C:\\Users\\ADMIN\\AppData\\Local\\Temp\\ipykernel_26392\\3833673906.py:22: FutureWarning: \n",
+            "C:\\Users\\ADMIN\\AppData\\Local\\Temp\\ipykernel_6868\\3833673906.py:22: FutureWarning: \n",
             "\n",
             "Passing `palette` without assigning `hue` is deprecated and will be removed in v0.14.0. Assign the `x` variable to `hue` and set `legend=False` for the same effect.\n",
             "\n",
             "  sns.countplot(x=col, data=df, palette='viridis')\n",
-            "C:\\Users\\ADMIN\\AppData\\Local\\Temp\\ipykernel_26392\\3833673906.py:22: FutureWarning: \n",
+            "C:\\Users\\ADMIN\\AppData\\Local\\Temp\\ipykernel_6868\\3833673906.py:22: FutureWarning: \n",
             "\n",
             "Passing `palette` without assigning `hue` is deprecated and will be removed in v0.14.0. Assign the `x` variable to `hue` and set `legend=False` for the same effect.\n",
             "\n",
             "  sns.countplot(x=col, data=df, palette='viridis')\n",
-            "C:\\Users\\ADMIN\\AppData\\Local\\Temp\\ipykernel_26392\\3833673906.py:22: FutureWarning: \n",
+            "C:\\Users\\ADMIN\\AppData\\Local\\Temp\\ipykernel_6868\\3833673906.py:22: FutureWarning: \n",
             "\n",
             "Passing `palette` without assigning `hue` is deprecated and will be removed in v0.14.0. Assign the `x` variable to `hue` and set `legend=False` for the same effect.\n",
             "\n",
             "  sns.countplot(x=col, data=df, palette='viridis')\n",
-            "C:\\Users\\ADMIN\\AppData\\Local\\Temp\\ipykernel_26392\\3833673906.py:22: FutureWarning: \n",
+            "C:\\Users\\ADMIN\\AppData\\Local\\Temp\\ipykernel_6868\\3833673906.py:22: FutureWarning: \n",
             "\n",
             "Passing `palette` without assigning `hue` is deprecated and will be removed in v0.14.0. Assign the `x` variable to `hue` and set `legend=False` for the same effect.\n",
             "\n",
             "  sns.countplot(x=col, data=df, palette='viridis')\n",
-            "C:\\Users\\ADMIN\\AppData\\Local\\Temp\\ipykernel_26392\\3833673906.py:22: FutureWarning: \n",
+            "C:\\Users\\ADMIN\\AppData\\Local\\Temp\\ipykernel_6868\\3833673906.py:22: FutureWarning: \n",
             "\n",
             "Passing `palette` without assigning `hue` is deprecated and will be removed in v0.14.0. Assign the `x` variable to `hue` and set `legend=False` for the same effect.\n",
             "\n",
             "  sns.countplot(x=col, data=df, palette='viridis')\n",
-            "C:\\Users\\ADMIN\\AppData\\Local\\Temp\\ipykernel_26392\\3833673906.py:22: FutureWarning: \n",
+            "C:\\Users\\ADMIN\\AppData\\Local\\Temp\\ipykernel_6868\\3833673906.py:22: FutureWarning: \n",
             "\n",
             "Passing `palette` without assigning `hue` is deprecated and will be removed in v0.14.0. Assign the `x` variable to `hue` and set `legend=False` for the same effect.\n",
             "\n",
             "  sns.countplot(x=col, data=df, palette='viridis')\n",
-            "C:\\Users\\ADMIN\\AppData\\Local\\Temp\\ipykernel_26392\\3833673906.py:22: FutureWarning: \n",
+            "C:\\Users\\ADMIN\\AppData\\Local\\Temp\\ipykernel_6868\\3833673906.py:22: FutureWarning: \n",
             "\n",
             "Passing `palette` without assigning `hue` is deprecated and will be removed in v0.14.0. Assign the `x` variable to `hue` and set `legend=False` for the same effect.\n",
             "\n",
             "  sns.countplot(x=col, data=df, palette='viridis')\n",
-            "C:\\Users\\ADMIN\\AppData\\Local\\Temp\\ipykernel_26392\\3833673906.py:22: FutureWarning: \n",
+            "C:\\Users\\ADMIN\\AppData\\Local\\Temp\\ipykernel_6868\\3833673906.py:22: FutureWarning: \n",
             "\n",
             "Passing `palette` without assigning `hue` is deprecated and will be removed in v0.14.0. Assign the `x` variable to `hue` and set `legend=False` for the same effect.\n",
             "\n",
             "  sns.countplot(x=col, data=df, palette='viridis')\n",
-            "C:\\Users\\ADMIN\\AppData\\Local\\Temp\\ipykernel_26392\\3833673906.py:22: FutureWarning: \n",
+            "C:\\Users\\ADMIN\\AppData\\Local\\Temp\\ipykernel_6868\\3833673906.py:22: FutureWarning: \n",
             "\n",
             "Passing `palette` without assigning `hue` is deprecated and will be removed in v0.14.0. Assign the `x` variable to `hue` and set `legend=False` for the same effect.\n",
             "\n",
             "  sns.countplot(x=col, data=df, palette='viridis')\n",
-            "C:\\Users\\ADMIN\\AppData\\Local\\Temp\\ipykernel_26392\\3833673906.py:22: FutureWarning: \n",
+            "C:\\Users\\ADMIN\\AppData\\Local\\Temp\\ipykernel_6868\\3833673906.py:22: FutureWarning: \n",
             "\n",
             "Passing `palette` without assigning `hue` is deprecated and will be removed in v0.14.0. Assign the `x` variable to `hue` and set `legend=False` for the same effect.\n",
             "\n",
             "  sns.countplot(x=col, data=df, palette='viridis')\n",
-            "C:\\Users\\ADMIN\\AppData\\Local\\Temp\\ipykernel_26392\\3833673906.py:22: FutureWarning: \n",
+            "C:\\Users\\ADMIN\\AppData\\Local\\Temp\\ipykernel_6868\\3833673906.py:22: FutureWarning: \n",
             "\n",
             "Passing `palette` without assigning `hue` is deprecated and will be removed in v0.14.0. Assign the `x` variable to `hue` and set `legend=False` for the same effect.\n",
             "\n",
             "  sns.countplot(x=col, data=df, palette='viridis')\n",
-            "C:\\Users\\ADMIN\\AppData\\Local\\Temp\\ipykernel_26392\\3833673906.py:22: FutureWarning: \n",
+            "C:\\Users\\ADMIN\\AppData\\Local\\Temp\\ipykernel_6868\\3833673906.py:22: FutureWarning: \n",
             "\n",
             "Passing `palette` without assigning `hue` is deprecated and will be removed in v0.14.0. Assign the `x` variable to `hue` and set `legend=False` for the same effect.\n",
             "\n",
             "  sns.countplot(x=col, data=df, palette='viridis')\n",
-            "C:\\Users\\ADMIN\\AppData\\Local\\Temp\\ipykernel_26392\\3833673906.py:22: FutureWarning: \n",
+            "C:\\Users\\ADMIN\\AppData\\Local\\Temp\\ipykernel_6868\\3833673906.py:22: FutureWarning: \n",
             "\n",
             "Passing `palette` without assigning `hue` is deprecated and will be removed in v0.14.0. Assign the `x` variable to `hue` and set `legend=False` for the same effect.\n",
             "\n",
             "  sns.countplot(x=col, data=df, palette='viridis')\n",
-            "C:\\Users\\ADMIN\\AppData\\Local\\Temp\\ipykernel_26392\\3833673906.py:22: FutureWarning: \n",
+            "C:\\Users\\ADMIN\\AppData\\Local\\Temp\\ipykernel_6868\\3833673906.py:22: FutureWarning: \n",
             "\n",
             "Passing `palette` without assigning `hue` is deprecated and will be removed in v0.14.0. Assign the `x` variable to `hue` and set `legend=False` for the same effect.\n",
             "\n",
             "  sns.countplot(x=col, data=df, palette='viridis')\n",
-            "C:\\Users\\ADMIN\\AppData\\Local\\Temp\\ipykernel_26392\\3833673906.py:22: FutureWarning: \n",
+            "C:\\Users\\ADMIN\\AppData\\Local\\Temp\\ipykernel_6868\\3833673906.py:22: FutureWarning: \n",
             "\n",
             "Passing `palette` without assigning `hue` is deprecated and will be removed in v0.14.0. Assign the `x` variable to `hue` and set `legend=False` for the same effect.\n",
             "\n",
@@ -2171,7 +2197,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 26,
+      "execution_count": 29,
       "metadata": {},
       "outputs": [
         {
@@ -2197,7 +2223,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": 30,
       "metadata": {},
       "outputs": [
         {
@@ -2232,7 +2258,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 28,
+      "execution_count": 31,
       "metadata": {},
       "outputs": [
         {
@@ -2269,7 +2295,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 29,
+      "execution_count": 32,
       "metadata": {},
       "outputs": [
         {
