--- a/Train.ipynb
+++ b/Train.ipynb
@@ -35,7 +35,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 1,
       "metadata": {
         "id": "EoDfnMDoag1n"
       },
@@ -61,7 +61,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -306,7 +306,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 3,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -720,7 +720,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 4,
       "metadata": {
         "collapsed": true,
         "id": "134d3860"
@@ -795,7 +795,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": 5,
       "metadata": {
         "collapsed": true,
         "id": "yzEuyuUthy-b"
@@ -842,7 +842,7 @@
               "dtype: int64"
             ]
           },
-          "execution_count": 14,
+          "execution_count": 5,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -871,7 +871,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": 6,
       "metadata": {
         "id": "zq7qIM7GAYkL"
       },
@@ -882,7 +882,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": 7,
       "metadata": {
         "collapsed": true,
         "id": "Y8iyMoQItSsU"
@@ -1290,7 +1290,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": 8,
       "metadata": {
         "collapsed": true,
         "id": "3qi-y8r0tedh"
@@ -1676,7 +1676,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": 9,
       "metadata": {
         "id": "3eeffc8a"
       },
@@ -1940,7 +1940,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": 10,
       "metadata": {
         "id": "54b64132"
       },
@@ -1968,7 +1968,7 @@
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "C:\\Users\\kax20\\AppData\\Local\\Temp\\ipykernel_7400\\3485626961.py:8: FutureWarning: \n",
+            "C:\\Users\\kax20\\AppData\\Local\\Temp\\ipykernel_14600\\3485626961.py:8: FutureWarning: \n",
             "\n",
             "Passing `palette` without assigning `hue` is deprecated and will be removed in v0.14.0. Assign the `x` variable to `hue` and set `legend=False` for the same effect.\n",
             "\n",
@@ -2016,7 +2016,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": 11,
       "metadata": {},
       "outputs": [
         {
@@ -2033,97 +2033,97 @@
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "C:\\Users\\kax20\\AppData\\Local\\Temp\\ipykernel_7400\\3833673906.py:22: FutureWarning: \n",
+            "C:\\Users\\kax20\\AppData\\Local\\Temp\\ipykernel_14600\\3833673906.py:22: FutureWarning: \n",
             "\n",
             "Passing `palette` without assigning `hue` is deprecated and will be removed in v0.14.0. Assign the `x` variable to `hue` and set `legend=False` for the same effect.\n",
             "\n",
             "  sns.countplot(x=col, data=df, palette='viridis')\n",
-            "C:\\Users\\kax20\\AppData\\Local\\Temp\\ipykernel_7400\\3833673906.py:22: FutureWarning: \n",
+            "C:\\Users\\kax20\\AppData\\Local\\Temp\\ipykernel_14600\\3833673906.py:22: FutureWarning: \n",
             "\n",
             "Passing `palette` without assigning `hue` is deprecated and will be removed in v0.14.0. Assign the `x` variable to `hue` and set `legend=False` for the same effect.\n",
             "\n",
             "  sns.countplot(x=col, data=df, palette='viridis')\n",
-            "C:\\Users\\kax20\\AppData\\Local\\Temp\\ipykernel_7400\\3833673906.py:22: FutureWarning: \n",
+            "C:\\Users\\kax20\\AppData\\Local\\Temp\\ipykernel_14600\\3833673906.py:22: FutureWarning: \n",
             "\n",
             "Passing `palette` without assigning `hue` is deprecated and will be removed in v0.14.0. Assign the `x` variable to `hue` and set `legend=False` for the same effect.\n",
             "\n",
             "  sns.countplot(x=col, data=df, palette='viridis')\n",
-            "C:\\Users\\kax20\\AppData\\Local\\Temp\\ipykernel_7400\\3833673906.py:22: FutureWarning: \n",
+            "C:\\Users\\kax20\\AppData\\Local\\Temp\\ipykernel_14600\\3833673906.py:22: FutureWarning: \n",
             "\n",
             "Passing `palette` without assigning `hue` is deprecated and will be removed in v0.14.0. Assign the `x` variable to `hue` and set `legend=False` for the same effect.\n",
             "\n",
             "  sns.countplot(x=col, data=df, palette='viridis')\n",
-            "C:\\Users\\kax20\\AppData\\Local\\Temp\\ipykernel_7400\\3833673906.py:22: FutureWarning: \n",
+            "C:\\Users\\kax20\\AppData\\Local\\Temp\\ipykernel_14600\\3833673906.py:22: FutureWarning: \n",
             "\n",
             "Passing `palette` without assigning `hue` is deprecated and will be removed in v0.14.0. Assign the `x` variable to `hue` and set `legend=False` for the same effect.\n",
             "\n",
             "  sns.countplot(x=col, data=df, palette='viridis')\n",
-            "C:\\Users\\kax20\\AppData\\Local\\Temp\\ipykernel_7400\\3833673906.py:22: FutureWarning: \n",
+            "C:\\Users\\kax20\\AppData\\Local\\Temp\\ipykernel_14600\\3833673906.py:22: FutureWarning: \n",
             "\n",
             "Passing `palette` without assigning `hue` is deprecated and will be removed in v0.14.0. Assign the `x` variable to `hue` and set `legend=False` for the same effect.\n",
             "\n",
             "  sns.countplot(x=col, data=df, palette='viridis')\n",
-            "C:\\Users\\kax20\\AppData\\Local\\Temp\\ipykernel_7400\\3833673906.py:22: FutureWarning: \n",
+            "C:\\Users\\kax20\\AppData\\Local\\Temp\\ipykernel_14600\\3833673906.py:22: FutureWarning: \n",
             "\n",
             "Passing `palette` without assigning `hue` is deprecated and will be removed in v0.14.0. Assign the `x` variable to `hue` and set `legend=False` for the same effect.\n",
             "\n",
             "  sns.countplot(x=col, data=df, palette='viridis')\n",
-            "C:\\Users\\kax20\\AppData\\Local\\Temp\\ipykernel_7400\\3833673906.py:22: FutureWarning: \n",
+            "C:\\Users\\kax20\\AppData\\Local\\Temp\\ipykernel_14600\\3833673906.py:22: FutureWarning: \n",
             "\n",
             "Passing `palette` without assigning `hue` is deprecated and will be removed in v0.14.0. Assign the `x` variable to `hue` and set `legend=False` for the same effect.\n",
             "\n",
             "  sns.countplot(x=col, data=df, palette='viridis')\n",
-            "C:\\Users\\kax20\\AppData\\Local\\Temp\\ipykernel_7400\\3833673906.py:22: FutureWarning: \n",
+            "C:\\Users\\kax20\\AppData\\Local\\Temp\\ipykernel_14600\\3833673906.py:22: FutureWarning: \n",
             "\n",
             "Passing `palette` without assigning `hue` is deprecated and will be removed in v0.14.0. Assign the `x` variable to `hue` and set `legend=False` for the same effect.\n",
             "\n",
             "  sns.countplot(x=col, data=df, palette='viridis')\n",
-            "C:\\Users\\kax20\\AppData\\Local\\Temp\\ipykernel_7400\\3833673906.py:22: FutureWarning: \n",
+            "C:\\Users\\kax20\\AppData\\Local\\Temp\\ipykernel_14600\\3833673906.py:22: FutureWarning: \n",
             "\n",
             "Passing `palette` without assigning `hue` is deprecated and will be removed in v0.14.0. Assign the `x` variable to `hue` and set `legend=False` for the same effect.\n",
             "\n",
             "  sns.countplot(x=col, data=df, palette='viridis')\n",
-            "C:\\Users\\kax20\\AppData\\Local\\Temp\\ipykernel_7400\\3833673906.py:22: FutureWarning: \n",
+            "C:\\Users\\kax20\\AppData\\Local\\Temp\\ipykernel_14600\\3833673906.py:22: FutureWarning: \n",
             "\n",
             "Passing `palette` without assigning `hue` is deprecated and will be removed in v0.14.0. Assign the `x` variable to `hue` and set `legend=False` for the same effect.\n",
             "\n",
             "  sns.countplot(x=col, data=df, palette='viridis')\n",
-            "C:\\Users\\kax20\\AppData\\Local\\Temp\\ipykernel_7400\\3833673906.py:22: FutureWarning: \n",
+            "C:\\Users\\kax20\\AppData\\Local\\Temp\\ipykernel_14600\\3833673906.py:22: FutureWarning: \n",
             "\n",
             "Passing `palette` without assigning `hue` is deprecated and will be removed in v0.14.0. Assign the `x` variable to `hue` and set `legend=False` for the same effect.\n",
             "\n",
             "  sns.countplot(x=col, data=df, palette='viridis')\n",
-            "C:\\Users\\kax20\\AppData\\Local\\Temp\\ipykernel_7400\\3833673906.py:22: FutureWarning: \n",
+            "C:\\Users\\kax20\\AppData\\Local\\Temp\\ipykernel_14600\\3833673906.py:22: FutureWarning: \n",
             "\n",
             "Passing `palette` without assigning `hue` is deprecated and will be removed in v0.14.0. Assign the `x` variable to `hue` and set `legend=False` for the same effect.\n",
             "\n",
             "  sns.countplot(x=col, data=df, palette='viridis')\n",
-            "C:\\Users\\kax20\\AppData\\Local\\Temp\\ipykernel_7400\\3833673906.py:22: FutureWarning: \n",
+            "C:\\Users\\kax20\\AppData\\Local\\Temp\\ipykernel_14600\\3833673906.py:22: FutureWarning: \n",
             "\n",
             "Passing `palette` without assigning `hue` is deprecated and will be removed in v0.14.0. Assign the `x` variable to `hue` and set `legend=False` for the same effect.\n",
             "\n",
             "  sns.countplot(x=col, data=df, palette='viridis')\n",
-            "C:\\Users\\kax20\\AppData\\Local\\Temp\\ipykernel_7400\\3833673906.py:22: FutureWarning: \n",
+            "C:\\Users\\kax20\\AppData\\Local\\Temp\\ipykernel_14600\\3833673906.py:22: FutureWarning: \n",
             "\n",
             "Passing `palette` without assigning `hue` is deprecated and will be removed in v0.14.0. Assign the `x` variable to `hue` and set `legend=False` for the same effect.\n",
             "\n",
             "  sns.countplot(x=col, data=df, palette='viridis')\n",
-            "C:\\Users\\kax20\\AppData\\Local\\Temp\\ipykernel_7400\\3833673906.py:22: FutureWarning: \n",
+            "C:\\Users\\kax20\\AppData\\Local\\Temp\\ipykernel_14600\\3833673906.py:22: FutureWarning: \n",
             "\n",
             "Passing `palette` without assigning `hue` is deprecated and will be removed in v0.14.0. Assign the `x` variable to `hue` and set `legend=False` for the same effect.\n",
             "\n",
             "  sns.countplot(x=col, data=df, palette='viridis')\n",
-            "C:\\Users\\kax20\\AppData\\Local\\Temp\\ipykernel_7400\\3833673906.py:22: FutureWarning: \n",
+            "C:\\Users\\kax20\\AppData\\Local\\Temp\\ipykernel_14600\\3833673906.py:22: FutureWarning: \n",
             "\n",
             "Passing `palette` without assigning `hue` is deprecated and will be removed in v0.14.0. Assign the `x` variable to `hue` and set `legend=False` for the same effect.\n",
             "\n",
             "  sns.countplot(x=col, data=df, palette='viridis')\n",
-            "C:\\Users\\kax20\\AppData\\Local\\Temp\\ipykernel_7400\\3833673906.py:22: FutureWarning: \n",
+            "C:\\Users\\kax20\\AppData\\Local\\Temp\\ipykernel_14600\\3833673906.py:22: FutureWarning: \n",
             "\n",
             "Passing `palette` without assigning `hue` is deprecated and will be removed in v0.14.0. Assign the `x` variable to `hue` and set `legend=False` for the same effect.\n",
             "\n",
             "  sns.countplot(x=col, data=df, palette='viridis')\n",
-            "C:\\Users\\kax20\\AppData\\Local\\Temp\\ipykernel_7400\\3833673906.py:22: FutureWarning: \n",
+            "C:\\Users\\kax20\\AppData\\Local\\Temp\\ipykernel_14600\\3833673906.py:22: FutureWarning: \n",
             "\n",
             "Passing `palette` without assigning `hue` is deprecated and will be removed in v0.14.0. Assign the `x` variable to `hue` and set `legend=False` for the same effect.\n",
             "\n",
@@ -2171,7 +2171,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": 12,
       "metadata": {},
       "outputs": [
         {
@@ -2197,7 +2197,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": 13,
       "metadata": {},
       "outputs": [
         {
@@ -2232,7 +2232,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": 14,
       "metadata": {},
       "outputs": [
         {
@@ -2269,7 +2269,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": 15,
       "metadata": {},
       "outputs": [
         {
@@ -2310,7 +2310,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": 16,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -2330,7 +2330,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 26,
+      "execution_count": 17,
       "metadata": {},
       "outputs": [
         {
@@ -3292,6 +3292,7 @@
     },
     "kernelspec": {
       "display_name": "Python 3",
+      "language": "python",
       "name": "python3"
     },
     "language_info": {
