--- a/Train.ipynb
+++ b/Train.ipynb
@@ -35,7 +35,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 56,
+      "execution_count": 2,
       "metadata": {
         "id": "EoDfnMDoag1n"
       },
@@ -64,7 +64,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 57,
+      "execution_count": 3,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -309,7 +309,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 58,
+      "execution_count": 4,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -708,7 +708,7 @@
         "id": "hmYAJRswe3fX"
       },
       "source": [
-        "**Tổng quan: Dataset raw data về employee gồm có 1470 mẫu và 35 cột (thuộc tinh)**\n"
+        "**Tổng quan: Dataset về employee gồm có 1470 mẫu và 35 cột (thuộc tinh)**\n"
       ]
     },
     {
@@ -723,7 +723,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 59,
+      "execution_count": 5,
       "metadata": {
         "collapsed": true,
         "id": "134d3860"
@@ -797,7 +797,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 60,
+      "execution_count": 6,
       "metadata": {},
       "outputs": [
         {
@@ -883,7 +883,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 61,
+      "execution_count": 7,
       "metadata": {
         "collapsed": true,
         "id": "yzEuyuUthy-b"
@@ -930,7 +930,7 @@
               "dtype: int64"
             ]
           },
-          "execution_count": 61,
+          "execution_count": 7,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -959,7 +959,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 62,
+      "execution_count": 8,
       "metadata": {
         "id": "zq7qIM7GAYkL"
       },
@@ -986,7 +986,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 63,
+      "execution_count": 9,
       "metadata": {},
       "outputs": [
         {
@@ -1376,7 +1376,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 64,
+      "execution_count": 10,
       "metadata": {},
       "outputs": [
         {
@@ -1468,7 +1468,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 65,
+      "execution_count": 11,
       "metadata": {
         "collapsed": true,
         "id": "3qi-y8r0tedh"
@@ -1507,7 +1507,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 66,
+      "execution_count": 12,
       "metadata": {
         "id": "3eeffc8a"
       },
@@ -1532,7 +1532,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 67,
+      "execution_count": 13,
       "metadata": {},
       "outputs": [
         {
@@ -1599,7 +1599,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 68,
+      "execution_count": 14,
       "metadata": {},
       "outputs": [
         {
@@ -1689,7 +1689,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 69,
+      "execution_count": 15,
       "metadata": {
         "id": "54b64132"
       },
@@ -1717,7 +1717,7 @@
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "C:\\Users\\ADMIN\\AppData\\Local\\Temp\\ipykernel_6260\\3138437406.py:8: FutureWarning: \n",
+            "C:\\Users\\ADMIN\\AppData\\Local\\Temp\\ipykernel_15600\\3138437406.py:8: FutureWarning: \n",
             "\n",
             "Passing `palette` without assigning `hue` is deprecated and will be removed in v0.14.0. Assign the `x` variable to `hue` and set `legend=False` for the same effect.\n",
             "\n",
@@ -1768,7 +1768,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 70,
+      "execution_count": 16,
       "metadata": {},
       "outputs": [
         {
@@ -1821,7 +1821,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 71,
+      "execution_count": 17,
       "metadata": {},
       "outputs": [
         {
@@ -1847,7 +1847,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 72,
+      "execution_count": 18,
       "metadata": {},
       "outputs": [
         {
@@ -1882,7 +1882,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 73,
+      "execution_count": 19,
       "metadata": {},
       "outputs": [
         {
@@ -1919,7 +1919,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 74,
+      "execution_count": 20,
       "metadata": {},
       "outputs": [
         {
@@ -1946,7 +1946,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 75,
+      "execution_count": 21,
       "metadata": {},
       "outputs": [
         {
@@ -1981,7 +1981,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 76,
+      "execution_count": 22,
       "metadata": {},
       "outputs": [
         {
@@ -2031,7 +2031,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 77,
+      "execution_count": 23,
       "metadata": {},
       "outputs": [
         {
@@ -2096,7 +2096,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 78,
+      "execution_count": 24,
       "metadata": {},
       "outputs": [
         {
@@ -2146,7 +2146,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 79,
+      "execution_count": 25,
       "metadata": {},
       "outputs": [
         {
@@ -2192,7 +2192,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 80,
+      "execution_count": 26,
       "metadata": {},
       "outputs": [
         {
@@ -2244,7 +2244,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 81,
+      "execution_count": 27,
       "metadata": {},
       "outputs": [
         {
@@ -2382,6 +2382,116 @@
         "plt.legend(loc='lower right')\n",
         "plt.show()\n",
         "\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 28,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Best parameters for Random Forest: {'max_depth': 10, 'min_samples_split': 2, 'n_estimators': 300}\n",
+            "Best accuracy for Random Forest: 0.8678\n",
+            "Best parameters for Logistic Regression: {'C': 1, 'solver': 'liblinear'}\n",
+            "Best accuracy for Logistic Regression: 0.8659\n",
+            "\n",
+            "Random Forest sau tinh chỉnh:\n",
+            "              precision    recall  f1-score   support\n",
+            "\n",
+            "           0       0.85      0.96      0.90       370\n",
+            "           1       0.41      0.13      0.19        71\n",
+            "\n",
+            "    accuracy                           0.83       441\n",
+            "   macro avg       0.63      0.55      0.55       441\n",
+            "weighted avg       0.78      0.83      0.79       441\n",
+            "\n",
+            "Độ chính xác: 0.8299\n",
+            "\n",
+            "Logistic Regression sau tinh chỉnh:\n",
+            "              precision    recall  f1-score   support\n",
+            "\n",
+            "           0       0.87      0.99      0.93       370\n",
+            "           1       0.78      0.25      0.38        71\n",
+            "\n",
+            "    accuracy                           0.87       441\n",
+            "   macro avg       0.83      0.62      0.65       441\n",
+            "weighted avg       0.86      0.87      0.84       441\n",
+            "\n",
+            "Độ chính xác: 0.8685\n",
+            "Best parameters for Logistic Regression: {'C': 1, 'solver': 'liblinear'}\n",
+            "Best accuracy for Logistic Regression: 0.8659\n",
+            "\n",
+            "Random Forest sau tinh chỉnh:\n",
+            "              precision    recall  f1-score   support\n",
+            "\n",
+            "           0       0.85      0.96      0.90       370\n",
+            "           1       0.41      0.13      0.19        71\n",
+            "\n",
+            "    accuracy                           0.83       441\n",
+            "   macro avg       0.63      0.55      0.55       441\n",
+            "weighted avg       0.78      0.83      0.79       441\n",
+            "\n",
+            "Độ chính xác: 0.8299\n",
+            "\n",
+            "Logistic Regression sau tinh chỉnh:\n",
+            "              precision    recall  f1-score   support\n",
+            "\n",
+            "           0       0.87      0.99      0.93       370\n",
+            "           1       0.78      0.25      0.38        71\n",
+            "\n",
+            "    accuracy                           0.87       441\n",
+            "   macro avg       0.83      0.62      0.65       441\n",
+            "weighted avg       0.86      0.87      0.84       441\n",
+            "\n",
+            "Độ chính xác: 0.8685\n"
+          ]
+        }
+      ],
+      "source": [
+        "from sklearn.model_selection import GridSearchCV\n",
+        "\n",
+        "# Tinh chỉnh mô hình sử dụng GridSearchCV cho Random Forest và Logistic Regression\n",
+        "\n",
+        "\n",
+        "# GridSearch cho Random Forest\n",
+        "param_grid_rf = {\n",
+        "    'n_estimators': [100, 200, 300],\n",
+        "    'max_depth': [None, 10, 20, 30],\n",
+        "    'min_samples_split': [2, 5, 10]\n",
+        "}\n",
+        "# Set estimator n_jobs=1 to avoid nested parallelism when GridSearchCV also parallelizes (important on Windows)\n",
+        "grid_rf = GridSearchCV(RandomForestClassifier(random_state=42, n_jobs=1), param_grid_rf, cv=5, scoring='accuracy', n_jobs=-1, verbose=2, refit=True)\n",
+        "grid_rf.fit(X_train, y_train)\n",
+        "print(f\"Best parameters for Random Forest: {grid_rf.best_params_}\")\n",
+        "print(f\"Best accuracy for Random Forest: {grid_rf.best_score_:.4f}\")\n",
+        "\n",
+        "# GridSearch cho Logistic Regression\n",
+        "param_grid_lr = {\n",
+        "    'C': [0.01, 0.1, 1, 10, 100],\n",
+        "    'solver': ['lbfgs', 'liblinear']\n",
+        "}\n",
+        "grid_lr = GridSearchCV(LogisticRegression(max_iter=1000), param_grid_lr, cv=5, scoring='accuracy', n_jobs=-1)\n",
+        "grid_lr.fit(X_train, y_train)\n",
+        "print(f\"Best parameters for Logistic Regression: {grid_lr.best_params_}\")\n",
+        "print(f\"Best accuracy for Logistic Regression: {grid_lr.best_score_:.4f}\")\n",
+        "\n",
+        "# Đánh giá lại trên tập kiểm tra\n",
+        "best_rf = grid_rf.best_estimator_\n",
+        "best_lr = grid_lr.best_estimator_\n",
+        "\n",
+        "y_pred_rf_best = best_rf.predict(X_test)\n",
+        "y_pred_lr_best = best_lr.predict(X_test)\n",
+        "\n",
+        "print(\"\\nRandom Forest sau tinh chỉnh:\")\n",
+        "print(classification_report(y_test, y_pred_rf_best))\n",
+        "print(f\"Độ chính xác: {accuracy_score(y_test, y_pred_rf_best):.4f}\")\n",
+        "\n",
+        "print(\"\\nLogistic Regression sau tinh chỉnh:\")\n",
+        "print(classification_report(y_test, y_pred_lr_best))\n",
+        "print(f\"Độ chính xác: {accuracy_score(y_test, y_pred_lr_best):.4f}\")"
       ]
     }
   ],
